@@ -9,10 +9,10 @@ require 'rubygems'
 require 'rubygems/gem_runner'
 require 'rubygems/exceptions'
 
-required_version = Gem::Requirement.new "> 1.8.3"
+required_version = Gem::Requirement.new ">= 1.8.6"
 
 unless required_version.satisfied_by? Gem.ruby_version then
-  abort "Expected Ruby Version #{required_version}, was #{Gem.ruby_version}"
+  abort "Expected Ruby Version #{required_version}, is #{Gem.ruby_version}"
 end
 
 args = ARGV.clone
