@@ -11,8 +11,8 @@ require 'rubygems'
 class TestConfig < RubyGemTestCase
 
   def test_datadir
-    datadir = Config::CONFIG['datadir']
-    assert_equal "#{datadir}/xyz", Config.datadir('xyz')
+    datadir = RbConfig::CONFIG['datadir']
+    assert_equal "#{datadir}/xyz", RbConfig.datadir('xyz')
   end
 
 end
