@@ -103,7 +103,7 @@ class TestGem < RubyGemTestCase
     bindir = if defined?(RUBY_FRAMEWORK_VERSION) then
                '/usr/bin'
              else
-               Config::CONFIG['bindir']
+               RbConfig::CONFIG['bindir']
              end
 
     assert_equal bindir, Gem.bindir(default)
@@ -194,11 +194,6 @@ class TestGem < RubyGemTestCase
 
   def test_self_dir
     assert_equal @gemhome, Gem.dir
-
-    Gem::DIRECTORIES.each do |filename|
-      assert File.directory?(File.join(Gem.dir, filename)),
-             "expected #{filename} to exist"
-    end
   end
 
   def test_self_ensure_gem_directories
@@ -546,11 +541,11 @@ class TestGem < RubyGemTestCase
     path = [@userhome, other].join File::PATH_SEPARATOR
     Gem.send :set_paths, path
 
-    assert File.exist?(File.join(@userhome, 'gems'))
-    assert File.exist?(File.join(other, 'gems'))
+    assert_equal [@userhome, other, @gemhome], Gem.path
   end
 
   def test_self_set_paths_nonexistent_home
+    ENV['GEM_HOME'] = @gemhome
     Gem.clear_paths
 
     other = File.join @tempdir, 'other'
@@ -559,7 +554,7 @@ class TestGem < RubyGemTestCase
 
     Gem.send :set_paths, other
 
-    refute File.exist?(File.join(other, 'gems'))
+    assert_equal [other, @gemhome], Gem.path
   end
 
   def test_self_source_index
@@ -624,7 +619,7 @@ class TestGem < RubyGemTestCase
     ENV['USERPROFILE'] = orig_user_profile
     ENV['USERDRIVE'] = orig_user_drive
     ENV['USERPATH'] = orig_user_path
-  end
+  end if '1.9' > RUBY_VERSION
 
   def util_ensure_gem_dirs
     Gem.ensure_gem_subdirectories @gemhome
