@@ -1,5 +1,17 @@
 # -*- coding: utf-8 -*-
 
+2009-06-03  Eric Hodel  <drbrain@segment7.net>
+
+	* bin/gem:  Support 1.8.6+
+	* lib/rubygems/digest*:  Removed, support dropped for Ruby < 1.8.6
+	* lib/rubygems/installer.rb:  Support env(1) in wrong path, use
+	  /bin/sh if shebang has options.  By Nobu, ruby trunk r22853.
+	* lib/rubygems/config_file.rb:  Switch to stdcall for appdata folder.
+	  [ruby-core:22601].
+	* lib/rubygems.rb:  Use only File::expand_path on 1.9 for home dir.
+	  Don't recklessly create directories.  Simplify RbConfig::datadir
+	  definition.
+
 2009-05-30  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/rubygems_version.rb:  1.3.4.
